# Stegnokit

./: .env.example  .env.local.example  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: bits.py  codec.py  config.py  crypto.py  ecc.py  main.py  ratelimit.py
backend/app/api/: routes_audio.py  routes_health.py  routes_image.py
backend/app/audio/: formats.py  quality.py  watermark.py
backend/app/image/: formats.py  quality.py  tiling.py  watermark.py
backend/tests/: conftest.py  test_audio.py  test_bits.py  test_codec.py  test_crypto.py  test_ecc.py
public/: _headers  robots.txt
scripts/: fetch-memes.mjs  secret-scan.mjs
src/: App.tsx  index.css
src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  MemeGallery.tsx  Navbar.tsx  Stats.tsx  Studio.tsx
src/components/studio/: Dropzone.tsx  MemePicker.tsx
src/components/ui/: AnimatedOrbs.tsx  BinaryStream.tsx  EncryptedText.tsx  GlassCard.tsx  GlitchText.tsx  GridBackground.tsx  Logo.tsx  MagneticButton.tsx  NoiseOverlay.tsx  ParticleField.tsx  RevealOnScroll.tsx  ScanLine.tsx  ScrollProgress.tsx
src/data/: memes.json
src/lib/: api.ts  auto.ts  memes.ts  utils.ts
