[project]
name = "stegnokit-backend"
version = "0.1.0"
description = "Stegnokit backend — robust image and audio steganography service"
requires-python = ">=3.10,<3.13"
dependencies = [
  # Web
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",

  # Crypto + ECC
  "cryptography>=43.0.0",
  "reedsolo>=1.7.0",

  # Image stack
  "numpy>=1.26.0,<2.2",
  "Pillow>=10.4.0",
  "pillow-avif-plugin>=1.4.6",
  "scikit-image>=0.24.0",
  "scipy>=1.13.0",

  # Image watermarking — TrustMark (Adobe, MIT)
  "trustmark>=0.7.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",

  # Audio stack
  "soundfile>=0.12.1",
  "librosa>=0.10.2",
  "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
